PR #357対応の1.21.1調整